BSE 0.22 - unreleased
========

 - automatic image insertion can now be disabled globally or on a
   per-article basis.
   https://rt4.develop-help.com/Ticket/Display.html?id=1331

BSE 0.21 - 07 Mar 2012
========

 - Squirrel::Template has largely been rewritten performing a parsing
   then a processing step rather than doing many, many s/// over the
   template text.

 - verbose output of generate.pl is now based on the template
   admin/generate.tmpl

 - add the referer tag to all dynamic pages

 - added [undeletable articles] to bse.cfg as a supplement to
   @NO_DELETE.  @NO_DELETE is now deprecated and may be removed in a
   future release of BSE.
   https://rt4.develop-help.com/Ticket/Display.html?id=1209

 - iterator inlines can now be filtered (Adrian Oldham)

 - added some more extension to content type mappings for video
   formats (Adrian Oldham)

 - the shopadmin order list targets are now much more efficient - they
   no longer load the entire order table, are paginated, and let the
   data do the selection of matching records.

   NOTE: this removes some backward compatibility - iterator filters
   no longer work and a new tag, all_order_count can be used to fetch
   order counts.  Extra search parameters have been provided to filter
   the results.

 - added a new adminurl2 tag where the second parameter is a target.

 - siteusers.pl now flashes all success messages, and success message
   text is fetched from the messages table

 - added is_released and is_expired methods to Article.  This should
   be visible to article tags in templates.

 - more consistently use tag_article on the admin side of the site.

 - make tag_article smarter so it can call more methods

 - consistently use admin_tags instead of the old collection of admin
   tag methods.

 - tag_object (used for object style tags) now checks
   restricted_method() if implemented for the object.

 - the editor file iterator is now an object iterator, and the efile