@@ -1,6 +1,12 @@
 BSE 0.22 - unreleased
 ========
 
+Bug fixes:
+
+ - the search index builder was ignoring configured field scores.
+
+Enhancements:
+
  - automatic image insertion can now be disabled globally or on a
    per-article basis.
    https://rt4.develop-help.com/Ticket/Display.html?id=1331
